--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,7 +8,15 @@ html(lang="en")
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body
         header
-            h1 Noom
+            h1 Raven
         main
-            h2 Welcome to Noom
+            ul
+            
+            form#nick
+                input(type="text", placeholder="Choose a nickname", required)
+                button Save
+             
+            form#message
+                input(type="text", placeholder="Write a msg", required)
+                button Send
         script(src="/public/app.js") 
