Feat: connect front to back using socketIO

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,22 +1,18 @@
-doctype html
-html(lang="en")
+html(lang="ko")
     head
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Noom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-    body
-        header
-            h1 Raven
-        main
-            ul
-            
-            form#nick
-                input(type="text", placeholder="Choose a nickname", required)
-                button Save
-             
-            form#message
-                input(type="text", placeholder="Write a msg", required)
-                button Send
-        script(src="/public/app.js") 
+        base(href="/")
+        title Chat
+    body 
+        header 
+            h1 Raven 
+        main 
+        
+        
+        script(src="/socket.io/socket.io.js") 
+        script(src="../public/app.js") 
+        //- 왜 /public/app.js를 하면
+        //- Uncaught SyntaxError: Unexpected token '<' 한 오류가 날까..?
