--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -14,6 +14,15 @@ html(lang="ko")
                 form
                     input(placeholder="Room name", required, type="text")
                     button Enter Room
+            div#room
+                h3
+                ul
+                form#name
+                    input(placeholder="nickname", required, type="text")
+                    button Save
+                form#msg
+                    input(placeholder="message", required, type="text")
+                    button Send
         script(src="/socket.io/socket.io.js") 
         script(src="../public/app.js") 
         //- 왜 /public/app.js를 하면
