--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,10 +11,11 @@ html(lang="ko")
             h1 Raven 
         main 
             div#myStream
-                video#myFace(autoplay,playsinline, muted, width="400", height="400")
+                video#myFace(autoplay,playsinline, width="400", height="400")
                 button#mute Mute
                 button#camera Turn Camera Off
+                select#cameras
         script(src="/socket.io/socket.io.js") 
-        script(src="../public/app.js") 
+        script(src="../public/js/app.js") 
         //- 왜 /public/app.js를 하면
         //- Uncaught SyntaxError: Unexpected token '<' 한 오류가 날까..?
